fix module-info (#19797)
Co-authored-by: annie-mac <annie-mac@annie-macs-MacBook-Pro.local>